--- a/components/newsForm.module.css
+++ b/components/newsForm.module.css
@@ -1,6 +1,3 @@
-.newsform {
-  margin-top: 50px;
-}
 .newsform input,
 textarea {
   border: solid 1px rgb(194, 193, 193);
@@ -19,7 +16,7 @@ textarea {
 
 .newsform input:focus,
 textarea:focus {
-  border-color: orange;
+  background-color: rgb(253, 236, 204);
 }
 
 .newsform > div {
@@ -29,4 +26,5 @@ textarea:focus {
 .newsform label {
   width: 100px;
   display: inline-block;
+  vertical-align: top;
 }
