--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
-h1, p {
+h1,
+p {
   font-family: Lato;
+}
+
+h1 {
+  background-color: rgb(243, 233, 199);
+  color: orange;
+  padding: 10px;
+  margin: 20px 10px;
 }
